<resources>
    <string name="app_name">TPBonApp</string>
    <string name="title_activity_liste_produit">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="not_registered">Pas de compte?</string>
    <string name="se_connecter">Se connecter</string>
    <string name="repeter_password">Repeter password</string>
    <string name="deja_se_registrer">Aves-vous déjà le compte?</string>
    <string name="connexion">Connexion</string>
    <string name="creer_un_compte">Creer un compte</string>
    <string name="action_settings">Settings</string>
    <string name="menu_copyLien">Copy le lien</string>
    <string name="menu_horaire">Horaire</string>
    <string name="menu_livraison">Livraison</string>
    <string name="menu_nousContacter">Nous contacter</string>
    <string name="menu_accueil">Accuiel</string>
    <string name="menu_menu">Menu</string>
    <string name="menu_panier">Panier</string>
    <string name="menu_planCommande">Planifier commande</string>
    <string name="menu_seRegistrer">Créer un compte</string>
    <string name="action_fermer">Fermer</string>
</resources>
